<resources>
    <string name="app_name">Users API (Smushko O.R.)</string>
    <string name="lines_amount">Display Lines</string>
    <string name="url_edit">Edit URL</string>

    <string-array name="pref_lines_amount_entries">
        <item>3</item>
        <item>7</item>
        <item>10</item>
        <item>50</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="user_id_example">1</string>
    <string name="username_example">Username</string>
    <string name="email_example">E-mail</string>
    <string name="post_title_example">qui est esse</string>
    <string name="action_settings">Settings</string>
    <string name="users_list_title">Users List</string>
    <string name="posts_list_title">Posts List</string>
    <string name="profile">PROFILE</string>
    <string name="user_info">USER INFO</string>
    <string name="username">Username</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="clear">Clear</string>
    <string name="enter_email">Enter email</string>
    <string name="empty">EMPTY</string>
    <string name="list_is_empty">List is empty…</string>
    <string name="send">Send</string>
    <string name="some_list">Some List</string>
    <string name="article_uppercase">ARTICLE</string>
    <string name="article_capitatized">Article</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
</resources>