<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/profile"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_person_24"
            app:tint="?attr/colorPrimaryVariant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/material_dynamic_neutral50"
                android:textSize="22sp"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>